# zero2prod-axum

./: .gitignore  Cargo.toml  Dockerfile  render.yaml  spec.yaml
.github/workflows/: general.yml  zero2prod.yml
configuration/: base.toml  local.toml
migrations/: 20231111025338_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
src/routes/home/: home.html  mod.rs
tests/: health_check.rs
