[package]
name = "zero2prod-axum"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod-axum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = "0.14.27"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
reqwest = "0.11"

