[package]
name = "zero2prod-axum"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod-axum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = "0.14.27"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
tracing = { version = "0.1.40" }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.2.0"

# OTEL
opentelemetry = { version = "0.21.0" }
opentelemetry-otlp = { version = "=0.14", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tracing-opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
reqwest = "0.11.22"

